PRIV-26 Lagt till tester och felhantering